Git_WGBH_QC/src/objects/Final_Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>CampaignMemberId__c</fullName>
        <label>CampaignMemberId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Final Search Result</relationshipLabel>
        <relationshipName>Final_Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Final Search Result</relationshipLabel>
        <relationshipName>Final_Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Final Search Result</relationshipLabel>
        <relationshipName>Final_Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberStatus__c</fullName>
        <label>MemberStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Search Request</label>
        <referenceTo>Search_Request__c</referenceTo>
        <relationshipName>Search_Result1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Campaign Criteria Template</label>
        <referenceTo>Campaign_Criteria_Template__c</referenceTo>
        <relationshipLabel>Final Search Result</relationshipLabel>
        <relationshipName>Final_Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Final Search Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>IsContact__c</columns>
        <columns>Contact__c</columns>
        <columns>Campaign__c</columns>
        <columns>Template__c</columns>
        <columns>MemberStatus__c</columns>
        <columns>CampaignMemberId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000000000}</displayFormat>
        <label>Search Result #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Search Result</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>